raffia/tests/recoverable/declaration/top-level-hash.css.error.snap
---
source: raffia/tests/recoverable.rs
---
error: declaration at top level is disallowed
  ┌─ top-level-hash.css:1:1
  │
1 │ color: #abc
  │ ^^^^^^^^^^^
